# stimpool

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.rst  README.md  codecov.yml  mypy.ini  noxfile.py  pyproject.toml  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  ci.md  config.yml  docs.md  feature_request.md  maintenance.md  question.md
.github/workflows/: docs.yml  linting.yml  release-drafter.yml  release.yml  release_github.yml  release_pypi.yml  release_pypy.yml  tests.yml
docs/: CODE_OF_CONDUCT.md  conf.py  contributing.md  design.org  index.rst  installation.rst  modules.rst  release_guide.md  requirements.txt  stimpool.rst  usage.rst  words.rst
src/stimpool/: __init__.py  words.py
src/stimpool/words/: README_hyph_es.txt  description.xml  dictionaries.xcu  package-description.txt
tests/: __init__.py  test_words.py
