
[tool.poetry]
name = "stimpool"
version = "0.2.0"
description = "Create stimuli pools for psychological research"
authors = ["Mario E. Bermonti Pérez <mbermonti1132@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/mario-bermonti/stimpool"
repository = "https://github.com/mario-bermonti/stimpool"
documentation = "https://stimpool.readthedocs.io/en/latest/"
keywords = ["stimpool"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",

    "License :: OSI Approved :: BSD License",

    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mario-bermonti/stimpool/issues"



[tool.poetry.scripts]
stimpool = 'stimpool.cli:main'


[tool.poetry.dependencies]
python = "<3.10,^3.6.1"
click = "^7.1.2"
pandas = ""
sphinx-markdown-tables = "^0.0.15"


[tool.poetry.dev-dependencies]
# testing
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
xdoctest = "^0.15.2"
coverage = {version = "^5.3", extras = ["toml"]}

# linting
flake8 = "^3.8.4"
flakehell = "^0.9.0"
flake8-builtins = "^1.5.3"
flake8-blind-except = "^0.2.0"
flake8-logging-format = "^0.6.0"
flake8-bugbear = "^20.11.1"
flake8-annotations = "^2.5.0"
flake8-docstrings = "^1.5.0"
flake8-bandit = "^2.1.2"
darglint = "^1.5.8"
safety = "^1.10.3"
mypy = "^0.790"

# formatting
isort = "^5.7.0"
black = "^20.8b1"

# docs
sphinx = "^3.4.3"
sphinx_autodoc_typehints = "*"
sphinx-rtd-theme = "0.5.1"
recommonmark = "^0.7.1"
autodocsumm = "^0.2.2"

# multi-purpose or other
invoke = "^1.5.0"
watchdog = {version = "^1.0.2", extras = ["watchmedo"]}
bump2version = "^1.0.1"
pre-commit = "^2.9.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["stimpool"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == __main__:"
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.flakehell]
format = "grouped"
max_line_length = 88
show_source = true
docstring_style = "numpy"
strictness = "short"
exclude = ["noxfile.py"]
extended_default_ignore = []  # added to temporarily fix flakehell issue

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
mccabe = ["+*"]
"flake8-*" = ["+*"]
darglint = ["+*"]
flake8-annotations = ["+*", "-ANN101"]
flake8-docstrings = ["+*","-D202"]

[tool.flakehell.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = ["invoke", "nox"]

[tool.black]
line-length = 88
target-version = ["py36"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
